--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "boilermaker",
+  "name": "not-alone",
   "version": "1.0.0",
-  "description": "Some boilerplate code to get you started - get shakin'!",
+  "description": "An interactive visualization of UFO sightings in the US since the 1950s",
   "engines": {
     "node": ">= 7.0.0"
   },
@@ -11,15 +11,11 @@
     "build-client-watch": "webpack -w",
     "deploy": "script/deploy",
     "lint": "eslint ./ --ignore-path .gitignore",
-    "lint-fix": "npm run lint -- --fix",
-    "precommit": "# lint-staged # un-comment to enable",
-    "prettify": "prettier --write \"**/*.{js,jsx,json,css,scss,md}\"",
-    "postinstall": "touch secrets.js",
     "seed": "node script/seed.js",
     "start": "node server",
     "start-dev": "NODE_ENV='development' npm run build-client-watch & npm run start-server",
     "start-server": "nodemon server -e html,js,scss --ignore public --ignore client",
-    "test": "NODE_ENV='test' mocha \"./server/**/*.spec.js\" \"./client/**/*.spec.js\" \"./script/**/*.spec.js\" --require @babel/polyfill --require @babel/register"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "lint-staged": {
     "*.{js,jsx}": [
@@ -35,13 +31,27 @@
   "author": "Fullstack Academy of Code",
   "license": "MIT",
   "dependencies": {
+    "@mapbox/react-geocoder": "^2.5.0",
     "axios": "^0.15.3",
     "body-parser": "^1.16.1",
     "compression": "^1.7.1",
     "connect-session-sequelize": "^4.1.0",
+    "d3-array": "^1.2.1",
+    "d3-axis": "^1.0.8",
+    "d3-brush": "^1.0.4",
+    "d3-geo": "^1.10.0",
+    "d3-scale": "^2.1.0",
+    "d3-selection": "^1.3.0",
+    "d3-shape": "^1.2.0",
+    "d3-svg-legend": "^2.25.6",
+    "d3-transition": "^1.1.1",
+    "esm": "^3.0.63",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
+    "file-loader": "^1.1.11",
     "history": "^4.6.3",
+    "k-means": "^1.0.0",
+    "leaflet": "^1.3.1",
     "morgan": "^1.8.1",
     "passport": "^0.3.2",
     "passport-google-oauth": "^1.0.0",
@@ -49,14 +59,21 @@
     "pg-hstore": "^2.3.2",
     "prop-types": "^15.5.8",
     "react": "^16.3.1",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.2",
-    "react-router-dom": "^4.1.1",
-    "redux": "^3.6.0",
-    "redux-logger": "^2.8.1",
-    "redux-thunk": "^2.2.0",
-    "sequelize": "^4.3.1",
-    "socket.io": "^2.0.3"
+    "react-bootstrap": "^0.32.1",
+    "react-bootstrap-typeahead": "^3.1.5",
+    "react-dom": "^16.4.1",
+    "react-geocoder": "^2.5.0",
+    "react-geocoder-autocomplete": "^3.0.11",
+    "react-leaflet": "^2.0.0",
+    "react-redux": "^5.0.7",
+    "react-router-dom": "^4.3.1",
+    "redux": "^3.7.2",
+    "redux-logger": "^2.10.2",
+    "redux-thunk": "^2.3.0",
+    "sequelize": "^4.38.0",
+    "socket.io": "^2.1.1",
+    "url-loader": "^1.0.1",
+    "victory": "^0.27.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
