--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "redux-thunk": "^2.3.0",
     "sequelize": "^4.38.0",
     "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
     "url-loader": "^1.0.1",
     "victory": "^0.27.2"
   },
